--- a/Belarusian.lang
+++ b/Belarusian.lang
@@ -434,12 +434,12 @@
     <Entry Name="Too Improve">Каб палепшыць гульнявы досвед, калі ласка, прытрымлівайцеся наступных парад.</Entry>
     <Entry Name="StartTip1">1. Выключыце святло.</Entry>
     <Entry Name="StartTip2">2. Пастаўце кантраст на максімум.</Entry>
-    <Entry Name="StartTip3">3. Адрыгулюйце яркасць такім чынам, каб выява ніжэй была амаль бачнай.</Entry>
+    <Entry Name="StartTip3">3. Адрэгулюйце яркасць такім чынам, каб выява ніжэй была амаль бачнай.</Entry>
     <Entry Name="StartTip4">4. Калі выява ўсё адно занадта цёмная/яркая, змяніце налады гаммы.</Entry>
     <Entry Name="DisablePersonal:">Дадаваць нататкі:</Entry>
     <Entry Name="AllowQuickSave:">Дазволіць хуткае захаванне:</Entry>
     <Entry Name="SimpleSwing:">Звычайны ўзмах:</Entry>
-    <Entry Name="PreMenuText">Ёсць пэўныя рэчы, якія мне ад цябе патрэбны. Рэчы, якія ты не зразумееш, а ,мабыць, і не захочаш, але калі ласка, не рабі тых самых памылак, што і я. [br][br]Мой бацька, Говард, пакінуў мяне яшчэ да нараджэння. Я мог бы сказаць, што страта маёй маці і пісьмо, якое я атрымаў пасля яе пахавання, асляпілі мяне да таго, што я павінен быў рабіць. Гэта была б хлусня: [br][br]Чалавечая прырода вызначыла маё падзенне.[br][br]Маё імя Філіп. Калі пашанцуе, я ўжо буду мёртвым, калі ты гэта атрымаеш.[br][br]Калі лёс не складзецца, мы ўсе загінем.</Entry>
+    <Entry Name="PreMenuText">Мне патрэбны ад цябе пэўныя рэчы. Рэчы, якія ты не зразумееш, а, мабыць, і не захочаш, але калі ласка, не рабі тых самых памылак, што і я. [br][br]Мой бацька, Говард, пакінуў мяне яшчэ да нараджэння. Я мог бы сказаць, што страта маёй маці і пісьмо, якое я атрымаў пасля яе пахавання, асляпілі мяне да таго, што я павінен быў рабіць. Гэта была б хлусня: [br][br]Чалавечая прырода вызначыла маё падзенне.[br][br]Маё імя Філіп. Калі пашанцуе, я ўжо буду мёртвым, калі ты гэта атрымаеш.[br][br]Калі лёс не складзецца, мы ўсе загінем.</Entry>
     <Entry Name="CreditsText">*PENUMBRA: OVERTURE[br]*Episode One[br][br][br][br][br][br][br][br][br][br][br]*FRICTIONAL GAMES[br][br][br][br][br]*Lead Programming[br]Thomas Grip[br][br][br]*Additional Programming[br]Luis Rodero Morales[br]Edward Rudd[br][br][br]*Lead Graphics[br]Anton Adamse[br][br][br]*Additional Graphics[br]Emil Meiton[br][br][br]*Sound[br]Jens Nilsson[br][br][br]*Music[br]Mikko Tarmia[br][br][br]*Level Scripting[br]Jens Nilsson[br]Thomas Grip[br][br][br]*Written by[br]TJ Jubert[br][br][br]*Voice Talent[br]Mike Hillard[br][br][br]*Logos[br]Niklas Mattisson[br][br][br]*Special Thanks to[br]Newton Game Dynamics[br]Angel Script[br]Troy A Gusler II[br]Marc Nicander[br]Near and dear for all support[br][br][br]*Beta Testing[br]Henrik Larsson[br]Cedric Guillemet[br]Anton Lenander[br]Petter Flink[br]Tim Soret[br][br][br][br][br][br][br][br][br]For more information on the next episode[br][br]*www.Penumbra-Overture.com</Entry>
     <Entry Name="Subtitle:">Субцітры:</Entry>
     <Entry Name="VoiceLanguange:">Агучка:</Entry>
@@ -449,16 +449,16 @@
     <Entry Name="Difficulty:">Цяжкасць:</Entry>
     <Entry Name="Shader Quality:">Якасць шэйдраў:</Entry>
     <Entry Name="Very Low">Вельмі нізкая</Entry>
-    <Entry Name="TipControlsMouseSensitivity">Вызначае, наколькі чуллівая будзе гульня да рухаў мышы.</Entry>
-    <Entry Name="TipControlsToggleCrouch">Адключае неабходнасць трымаць нажатай кнопку каб красціся.</Entry>
+    <Entry Name="TipControlsMouseSensitivity">Вызначае, наколькі чуллівай будзе гульня да рухаў мышы.</Entry>
+    <Entry Name="TipControlsToggleCrouch">Адключае неабходнасць трымаць націснутай кнопку, каб красціся.</Entry>
     <Entry Name="TipControlsInvertMouseY">Інвертуе напрамак вертыкальных рухаў мышы пры аглядзе.</Entry>
     <Entry Name="TipSoundVolume">Гучнасць гукаў і музыкі.</Entry>
     <Entry Name="TipGameDifficulty">Змяняе цяжкасць. Можна змяняць напрацягу гульні.</Entry>
     <Entry Name="TipGameDisablePersonal">Адключыце, каб выдаліць падказкі, што рабіць далей.</Entry>
     <Entry Name="TipGameSubtitles">Пераканайцеся, што агучка на вашай мове перад тым як адключаць.</Entry>
     <Entry Name="TipGameLanguage">Змяняе мову. Захоўванні на іншых мовах працаваць НЕ БУДУЦЬ.</Entry>
-    <Entry Name="TipGraphicsGamma">Яркасць экрана. Можа зрабіць колеры цьмянымі, таму лепей выкарыстоўвайце налады манітора. Патрабуе перазапуск.</Entry>
-    <Entry Name="TipGraphicsNoiseFilter">Шумавы фільтр дадае зярністаць і рэалізм да гульнявой графікі.</Entry>
+    <Entry Name="TipGraphicsGamma">Яркасць экрана. Можа зрабіць колеры цьмянымі, таму лепей выкарыстоўваць налады манітора. Патрабуе перазапуск.</Entry>
+    <Entry Name="TipGraphicsNoiseFilter">Шумавы фільтр дадае зярністасць і рэалізм да гульнявой графікі.</Entry>
     <Entry Name="TipGraphicsShadows">Адключэнне ценяў можа вельмі палепшыць прадукцыйнасць. Са статычнымі адрысоўваюцца толькі найбольш важныя.</Entry>
     <Entry Name="TipGraphicsTextureFilter">Трылінейная дае лепшую графіку пры аддаленні, тым часам білінейная хутчэйшая.</Entry>
     <Entry Name="TipGraphicsTextureAnisotropy">Робіць аддаленыя тэкстуры пад вялікім вуглом прыгажэйшымі. Прыметна толькі з вялікай разрознасцю. Аказвае вялікі ўплыў на прадукцыйнасць.</Entry>
@@ -477,8 +477,8 @@
     <Entry Name="TipDifficultyNormal">Найбольш збалансаваны рэжым для гульні.</Entry>
     <Entry Name="TipDifficultyHard">Ворагі вытрымліваюць больш пашкоджанняў і рухаюцца больш хутка.</Entry>
     <Entry Name="Use Hardware:">Use Hardware:</Entry>
-    <Entry Name="TipSoundHardware">Уключыце, калі трэба выкарыстоўваць апаратныя драйверы, патрабуецца для акружэння. Выключыце, калі натрапілі на гукавыя глюкі. Патрабуе перазапуск.</Entry>
-    <Entry Name="Show Crosshair:">Паказваць прыцэл:</Entry>
+    <Entry Name="TipSoundHardware">Уключыце, калі трэба выкарыстоўваць апаратныя драйверы, патрабуецца для акружэння. Адключыце, калі натрапілі на гукавыя глюкі. Патрабуе перазапуск.</Entry>
+    <Entry Name="Show Crosshair:">Паказваць перакрыжаванне:</Entry>
   </CATEGORY>
   <CATEGORY Name="Global">
     <Entry Name="CombineStringDextrin">Прасякнутая ў Бакстрыне, таму порах павінен прыліпаць. Або, дакладней сказаць, я малюся, каб порах прыліпаў.</Entry>
