reduce intro text

--- a/Belarusian.lang
+++ b/Belarusian.lang
@@ -961,18 +961,18 @@
     <Entry Name="EventEnd02">Працяг будзе...</Entry>
   </CATEGORY>
   <CATEGORY Name="Intro">
-    <Entry Name="01_01">Што да майго ўдзелу ў гэтай алегорыі, я не збіраюся рабіць тых самых памылак, што зрабіў мой бацька.</Entry>
-    <Entry Name="01_02">Говард знік з жыцця маёй маці яшчэ да таго, як там з'явіўся я, таму, калі ён даслаў мне ліст праз некалькі дзён пасля пахавання маці, гэта быў першы раз, калі я нешта аб ім пачуў</Entry>
-    <Entry Name="01_03">Шкада, ён ужо памёр. Дасылаць лісты з труны, мабыць, гэта генетычная звычка, закладзеная у нас у крыві.</Entry>
-    <Entry Name="01_04">Яго пісьмо змяшчала ключ, інструкцыі, упрошванні аб прабачэнні. Я палічыў, што мёртвым не надта патрэбна адпушчэнне грахоў, таму я звярнуўся да яго прарочага зыходу, які ён незразумелым чынам чакаў у любы дзень.</Entry>
-    <Entry Name="02_01">Відавочна пазбягаючы тлумачэнняў, мой бацька палічыў за лепшае аставіць напрамкі на банк у Мейфэры, пра які я ніколі ў жыцці не чуў. У гэтым банку была дэпазітная ячэйка на яго імя, і я ў якасці выканаўцы.</Entry>
-    <Entry Name="02_02">Канешне я паехаў, як ён і прадбачваў.</Entry>
-    <Entry Name="02_03">Я выявіў, што нягледзячы на доказы, ён быў афіцыйна прызнаны мёртвым амаль 30 гадоў таму, такім чынам і старая кніга, і калекцыя нататак, якія я знайшоў, з пункту гледжання закону, увесь гэты час былі маімі.</Entry>
-    <Entry Name="03_00">У інструкцыях майго бацькі было сказана спаліць дакументы, не задаючы больш ніякіх пытанняў. Але ў гэтым была яго памылка. Ні адзін чалавек не мае імунітэту да ганебных атрыбутаў зацікаўленасці, а... Мая чалавечнасць мяне ў гэтым перамагла.</Entry>
-    <Entry Name="03_01">Універсітэт, у якім я выкладаў быў сусветна вядомым праз дзве рэчы: фізікаў і лінгвістаў. Я прадстаўляў першых, а чалавек, які стаяў за другімі, быў у тупіку ад майго нядаўняга набыцця.</Entry>
+    <Entry Name="01_01">Што да майго ўдзелу ў гэтай алегорыі, я не збіраюся рабіць тых жа памылак, што і мой бацька.</Entry>
+    <Entry Name="01_02">Говард знік з жыцця маёй маці яшчэ да майго з'яўлення, таму, калі ён даслаў мне ліст праз некалькі дзён пасля яе пахавання, гэта быў першы раз, калі я нешта аб ім пачуў.</Entry>
+    <Entry Name="01_03">Шкада, ён ужо памёр. Дасылаць лісты з труны, мабыць, гэта генетычная звычка у нашай крыві.</Entry>
+    <Entry Name="01_04">Яго пісьмо змяшчала ключ, інструкцыі, упрошванні аб прабачэнні. Я палічыў, што мёртвым не надта патрэбна адпушчэнне грахоў, таму я пераключыўся на яго прарочы зыход, які ён незразумела чакаў у любы дзень.</Entry>
+    <Entry Name="02_01">Відавочна пазбягаючы тлумачэнняў, мой бацька палічыў за лепшае пакінуць напрамкі на банк у Мейфэры, пра які я ніколі ў жыцці не чуў. У гэтым банку была дэпазітная ячэйка на яго імя, і я ў якасці гаспадара.</Entry>
+    <Entry Name="02_02">Вядома я паехаў, як ён і прадбачваў.</Entry>
+    <Entry Name="02_03">Я выявіў, што, нягледзячы на доказы, ён быў афіцыйна прызнаны мёртвым амаль 30 гадоў таму, такім чынам і старая кніга, і калекцыя нататак, якія я знайшоў, з пункту гледжання закону, даўно былі маімі.</Entry>
+    <Entry Name="03_00">У інструкцыях майго бацькі было сказана спаліць дакументы, не задаючы ніякіх пытанняў. Але ў гэтым была яго памылка. Ні адзін чалавек не мае імунітэту да ганебных атрыбутаў зацікаўленасці, а... Мая чалавечнасць мяне тут перамагла.</Entry>
+    <Entry Name="03_01">Універсітэт, у якім я выкладаў, быў сусветна вядомым праз дзве рэчы: фізікаў і лінгвістаў. Я прадстаўляў першых, а адзін з прадстаўнікоў другіх быў у тупіку ад майго нядаўняга набыцця.</Entry>
     <Entry Name="03_02">Кніга не паддавалася расшыфроўцы. Нататкі, аднак, накіравалі на лакацыю недзе ў бязлюднай частцы Паўночнай Грэнландыі.</Entry>
     <Entry Name="04_01">Амаль год я патраціў, каб сабрацца ў апошні палёт у сваім жыцці.</Entry>
-    <Entry Name="05_01">Мы прызямліліся на палосцы льду, даўжынёй у некалькі футаў, і ўжо праз некалькі хвілін я адплываў на чартарнай лодцы, пачынаючы 12-гадзіннае падарожжа, якое прывядзе мяне ў маё мінулае.</Entry>
+    <Entry Name="05_01">Мы прызямліліся на палосцы льду, даўжынёй у некалькі футаў, і ўжо праз некалькі хвілін я адплываў на чартарнай лодцы, пачынаючы 12-гадзіннае падарожжа, якое прывядзе мяне ў мінулае.</Entry>
     <Entry Name="04_02">Назіраючы, як цывілізацыя знікае разам з Хітроў, я ўсвядоміў, што мой бацька знік тры дзесяцігоддзі таму, амаль у той жа дзень, а я, у сваю чаргу, думаў аб тым, што пакідаю ззаду.</Entry>
     <Entry Name="00_01">Мая гісторыя пачынаецца ў лютым 2000-га года.</Entry>
   </CATEGORY>
